public interface ProductsInterface
{
    public String toString();
}
